force-app/main/default/objects/GiftEntry/fields/FQS_Donor_Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Donor_Tax_Date__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Donor_Tax_Date__c. Captured on the Gift Entry launcher when the donor's tax-credit date differs from the Transaction Date. Written to GiftTransaction.FQS_Donor_Tax_Date__c on commit. Renamed from FQS_Donor_Tax_Acknowledgement_Date__c to avoid confusion with the standard AcknowledgementDate (thank-you date).</description>
    <inlineHelpText>The date the donor is credited for tax purposes — postmark for mailed checks, charge date for cards, delivery date for stock. Leave blank if your org treats the Transaction Date as the tax date.</inlineHelpText>
    <label>Donor Tax Date</label>
    <type>Date</type>
</CustomField>