force-app/main/default/objects/GiftEntry/fields/FQS_Fair_Market_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>FQS_Fair_Market_Value_Amount__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Fair_Market_Value_Amount__c. Captured on the Gift Entry launcher for in-kind gifts. Written to GiftTransaction.FQS_Fair_Market_Value_Amount__c on commit. For in-kind gifts the FQS convention is: Gift Amount (OriginalAmount) = 0, NonTaxDeductibleAmount = 0, FMV recorded here.</description>
    <inlineHelpText>Estimated fair market value of the donated goods or services. Used for the tax receipt and reporting only — the donor determines the actual tax-deductible value on their own return.</inlineHelpText>
    <label>Fair Market Value Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>