force-app/main/default/objects/GiftEntry/fields/FQS_GC_Restriction_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_GC_Restriction_Release_Date__c</fullName>
    <description>Staging mirror routed to GiftCommitment.FQS_Restriction_Release_Date__c on commit. Blank means no time restriction on the commitment. Paired with FQS_GT_Restriction_Release_Date__c on the transaction side — Salesforce enforces one GiftEntry source field to one destination field per FieldMappingConfig, so GC and GT need separate staging columns. See docs/gift-entry-field-mapping.md.</description>
    <inlineHelpText>The date restricted funds on this commitment become available for either general use or for their designated purpose. Populates onto the Gift Commitment on commit.</inlineHelpText>
    <label>Restriction Release Date (GC)</label>
    <type>Date</type>
</CustomField>