force-app/main/default/objects/GiftEntry/fields/FQS_GC_Skip_Naming__c.field-meta.xml
<CustomField>
    <fullName>FQS_GC_Skip_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Staging mirror routed to GiftCommitment.FQS_Skip_Naming__c on commit. When TRUE, the FQS Auto Name Gift Commitment flow skips the resulting GC record and leaves Name as-is. Paired with FQS_GT_Skip_Naming__c on the transaction side — Salesforce enforces one GiftEntry source field to one destination field per FieldMappingConfig. Use for imports or integration writes that carry an authoritative external Name.</description>
    <inlineHelpText>Check to prevent the FQS auto-naming flow from overwriting the Name on the resulting Gift Commitment.</inlineHelpText>
    <label>Skip FQS Auto Naming (GC)</label>
    <type>Checkbox</type>
</CustomField>