force-app/main/default/objects/GiftEntry/fields/FQS_GT_Restriction_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_GT_Restriction_Release_Date__c</fullName>
    <description>Staging mirror routed to GiftTransaction.FQS_Restriction_Release_Date__c on commit. Convention: one year past the transaction's date. Blank means no time restriction on the transaction. Paired with FQS_GC_Restriction_Release_Date__c on the commitment side — Salesforce enforces one GiftEntry source field to one destination field per FieldMappingConfig, so GC and GT need separate staging columns. See docs/gift-entry-field-mapping.md.</description>
    <inlineHelpText>The date restricted funds from this payment become available for either general use or for their designated purpose. Populates onto the Gift Transaction on commit.</inlineHelpText>
    <label>Restriction Release Date (GT)</label>
    <type>Date</type>
</CustomField>