force-app/main/default/objects/GiftEntry/fields/FQS_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>FQS_Match_Status__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Match_Status__c. Both fields source their picklist values from the FQS_Match_Status GlobalValueSet so the launcher staging value always matches what lands on the transaction. Written to GiftTransaction.FQS_Match_Status__c on commit. Tracks the lifecycle of a corporate matching-gift request — Eligible, Request Confirmed, Received, Declined, or N/A.</description>
    <inlineHelpText>Where this gift stands in the corporate matching lifecycle. Leave blank or set to N/A if no match is expected. Set to Received once the matching-employer transaction has been received and linked.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FQS_Match_Status</valueSetName>
    </valueSet>
</CustomField>