force-app/main/default/objects/GiftEntry/fields/FQS_Restriction_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Restriction_Release_Date__c</fullName>
    <description>Staging mirror. Written to both GiftCommitment.FQS_Restriction_Release_Date__c (on commitment creation) and GiftTransaction.FQS_Restriction_Release_Date__c (on the transaction fanout) at commit. Convention: one year past the transaction's date. Blank means no time restriction. See docs/gift-entry-field-mapping.md.</description>
    <inlineHelpText>The date restricted funds from this payment become available for either general use or for their designated purpose. Populates onto both the Gift Commitment and each Gift Transaction on commit.</inlineHelpText>
    <label>Restriction Release Date</label>
    <type>Date</type>
</CustomField>