force-app/main/default/objects/GiftEntry/fields/FQS_Stewardship_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Stewardship_Date__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Stewardship_Date__c. Carries a manual override date when stewardship was performed outside the automated flow (personal note, phone call, in-person). Written to GiftTransaction.FQS_Stewardship_Date__c on commit. Blank on most entries — the automated FQS_Stewardship_Response flow writes the field post-commit when the stewardship touch is delivered.</description>
    <inlineHelpText>Date the stewardship follow-up occurred — only fill in if stewardship happened outside Salesforce. The automated stewardship flow otherwise writes this on delivery.</inlineHelpText>
    <label>Stewardship Date</label>
    <type>Date</type>
</CustomField>