force-app/main/default/objects/GiftEntry/fields/FQS_Stewardship_Status__c.field-meta.xml
<CustomField>
    <fullName>FQS_Stewardship_Status__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Stewardship_Status__c. Both fields source their picklist values from the FQS_Stewardship_Status GlobalValueSet so the launcher staging value always matches what lands on the transaction. Written to GiftTransaction.FQS_Stewardship_Status__c on commit.</description>
    <inlineHelpText>Status of the follow-up stewardship touch. Set to "Don't Send" to suppress automated stewardship. Distinct from Acknowledgement Status, which tracks the initial thank-you.</inlineHelpText>
    <label>Stewardship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FQS_Stewardship_Status</valueSetName>
    </valueSet>
</CustomField>