force-app/main/default/objects/GiftEntry/fields/FQS_Tax_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Tax_Receipt_Date__c</fullName>
    <description>Staging mirror of GiftTransaction.FQS_Tax_Receipt_Date__c. Rare on Gift Entry — year-end tax receipting is out of scope for FQS automation and typically handled by bulk update, not per-gift entry. Kept on the staging row for the edge case where a gift is entered retroactively with its tax receipt already issued. Written to GiftTransaction.FQS_Tax_Receipt_Date__c on commit.</description>
    <inlineHelpText>Date this gift's tax receipt was issued to the donor. Usually filled in by an annual bulk update — enter here only if the receipt was issued before entering the gift into Salesforce.</inlineHelpText>
    <label>Tax Receipt Date</label>
    <type>Date</type>
</CustomField>